@@ -1,4 +1,4 @@
-MANIFEST for my-autoconf, version t20031122
+MANIFEST for my-autoconf, version t20031129
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 config.guess                    autoconf's config.guess
